Fix cv spacing

--- a/source/stylesheets/me.css
+++ b/source/stylesheets/me.css
@@ -38,6 +38,7 @@ h4 {
 p {
   margin: 1mm;
   font-size: 5mm;
+  line-height: 5mm;
 }
 
 .page {
